--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">        
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <div class="container">
+            <img src="img/pokemon.png" alt="pokemon">
+            <h1 class='h1'>Welcome to Pokédex</h1>
+        </div>
+        <div>
+            <ul class='pokemon-list'></ul>
+        </div>
 
         <script SRC="js/scripts.js"></script>
     </body>
