--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div>
             <ul class='pokemon-list'></ul>
         </div>
-
-        <script SRC="js/scripts.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/fetch.umd.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
