--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </div>
         <div>
             <ul class='pokemon-list'></ul>
+            <div id='modal-container'>
+            </div>
         </div>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
